--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "Mikhail Nepomniashchii",
   "private": true,
   "dependencies": {
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -31,12 +32,12 @@
   "devDependencies": {
     "eslint": "^8.14.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.6.2"
   }
 }
