replace redux with redux/toolkot & refactored filter

--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "job-listings",
+  "name": "simple-job-listings",
   "version": "0.1.0",
   "author": "flyza",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
-    "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0"
